# fig

./: Cargo.toml  README.md  test1.gcode  test1_stripped.gcode  test2.gcode
src/: camera.rs  drawing.rs  main.rs  reader.rs  shader.wgsl  text.rs  textshader.wgsl  winfont.rs
